Initial version with entities, context, repository and data seed

--- a/LunchVote.API/appsettings.json
+++ b/LunchVote.API/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "connectionStrings": {
+    "staging": "Server=(localdb)\\mssqllocaldb;Database=LunchVoteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
