- Flow conclusion, including IHostedService to run a task that call the FinishElection method; - Inclusion of methods that allow the control of election start/end; - Migrations rebase; - Angular components included.

--- a/LunchVote.API/LunchVote.API.csproj
+++ b/LunchVote.API/LunchVote.API.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>1a580bd6-df7b-4b5e-8011-5e9545f6cb2d</UserSecretsId>
   </PropertyGroup>
